--- a/数据结构/题.md
+++ b/数据结构/题.md
@@ -3,3 +3,7 @@
 此题选D给定结点个数n，对于哈夫曼树，n= 2*n0-1，叶节点n0 = （n+1）/2
 对于完全二叉树，可以根据公式进行推导，假设n0是度为0的结点总数（即叶子结点数），n1是度为1的结点总数，n2是度为2的结点总数，由二叉树的性质可 知：n0=n2+1，且n= n0+n1+n2（其中n为完全二叉树的结点总数），由上述公式把n2消去得：n= 2n0+n1-1，由于完全二叉树中度为1的结点数只有两种可能0或1，由此得到n0=（n+1）/2或n0=n/2
 对于满二叉树，度为1的节点数为0，故n0=（n+1）/2
+
+# 二叉树遍历
+
+**前序遍历：根节点在前**
