--- a/数据结构/数据结构.md
+++ b/数据结构/数据结构.md
@@ -6,7 +6,11 @@
 
 满k叉树编号为n的结点的第k-1个孩子的编号为nk
 
-# 二维数组的行优先存储
+# C语言中二维数组按行优先存储
+
+**A~m*n~是m行n列，每行n个元素，每列m个元素**
+
+![image-20231015202219281](assets/image-20231015202219281.png)
 
 # 字符串匹配KMP算法
 
