--- a/数据结构/题.md
+++ b/数据结构/题.md
@@ -7,3 +7,28 @@
 # 二叉树遍历
 
 **前序遍历：根节点在前**
+
+# 算法时间复杂度
+
+![image-20231016203416064](assets/image-20231016203416064.png)
+
+# 森林转化二叉树、树转化二叉树
+
+兄弟之间加一条线
+对每个结点，只保留他与第一个孩子的连线，而与所有其他孩子的连线全部断掉
+以树根为轴心，顺时针选择45度
+
+# 散列查找拉链法
+
+ASL~失败~的计算
+
+![image-20231016212856832](assets/image-20231016212856832.png)
+
+# 邻接表有向图的深度遍历
+
+f的功能输出有向图从任意一个顶点开始进行一次深度遍历所能得到的顶点序列
+
+![image-20231016215414782](assets/image-20231016215414782.png)
+
+![image-20231016215443345](assets/image-20231016215443345.png)
+
