--- a/数据结构/数据结构.md
+++ b/数据结构/数据结构.md
@@ -15,3 +15,22 @@
 # 字符串匹配KMP算法
 
 if(p~i~==p~j~)next[j+1]=next[j]+1要理解
+
+# 堆排序，对堆的调整
+
+# 压缩矩阵
+
+# n个结点的二叉树的形态数
+
+**f(n) = f(n-1) \* f(0)+f(n-2) \* f(1)+...+f(0) \* f(n-1)**
+
+而刚好这个数列正好是卡特兰数，上面式子也就是下面的式子
+
+![image-20231017214324732](assets/image-20231017214324732.png)
+
+n个结点组成的二叉树有f(n)种形态
+
+**四个结点的二叉树有8!/(4! \* 5!)=14种形态**
+
+
+
