--- a/数据结构/数据结构.md
+++ b/数据结构/数据结构.md
@@ -32,5 +32,8 @@ n个结点组成的二叉树有f(n)种形态
 
 **四个结点的二叉树有8!/(4! \* 5!)=14种形态**
 
+# dijkstra算法
 
+![image-20231018102510642](assets/image-20231018102510642.png)
 
+![e97ccca93c70a5447236f60756371934](assets/e97ccca93c70a5447236f60756371934.jpeg)
