--- a/数据结构/题.md
+++ b/数据结构/题.md
@@ -52,3 +52,12 @@ n个结点组成的二叉树有f(n)种形态
 
 **四个结点的二叉树有8!/(4! \* 5!)=14种形态**
 
+# 栈堆
+
+（王道每日一题）若用STACK[n]表示某堆栈采用顺序存储结构，则下列关于堆栈及堆栈操作的叙述中正确的是（   ）。
+A．堆栈的大小为n；
+B．堆栈为空时n=0;
+C．最多只能进行n次进栈和出栈操作；
+D．n各元素依次进栈后，它们的出栈顺序与进栈顺序相反
+（王道每日一题解析）解析：此题选A,
+ B选项，堆栈为空时n=-1，C 选项，应该是可以进行无限次进栈出栈，D选项， 每个元素进栈后又立马出栈，就可以保证元素依次进栈，且进栈顺序与出栈一致。
