--- a/密码学/密码学复习.md
+++ b/密码学/密码学复习.md
@@ -14,3 +14,57 @@
 
 ![image-20231018203145380](assets/image-20231018203145380.png)
 
+# 第一章
+
+系统的保密性不依赖于对加密体制或算法的保密，而依赖于密钥
+
+明文消息空间、密文消息空间、加密变换、解密变换、密钥空间
+
+密码体制分类：单钥体制、公钥体制
+
+单钥体制：流密码、分组密码。
+
+对密码系统的攻击类型：
+
+1. 唯密文攻击
+2. 已知明文攻击
+3. 选择明文攻击
+4. 选择密文攻击
+
+# 流密码
+
+## 同步流密码
+
+密钥流产生器、加密变换器
+
+抗线性分析、抗统计分析
+
+## 有限状态自动机
+
+初始状态、序列（从左往右）、输出、状态转变，转移图、状态序列、输出序列
+
+## 密钥流产生器
+
+
+
+## 线性反馈移位寄存器（LFSR）
+
+周期
+
+n级线性移位反馈寄存器，**m序列：周期等于2^n^-1**
+
+## 线性移位寄存器的一元多项式表示
+
+LFSR的**特征多项式**：p(x)=1+c~1~x+c~2~x^2^+……+c~n-1~x^n-1^+c~n~x^n^
+
+**G(p(x))**：n级线性移位寄存器的非恒零的2^n^-1个递推序列
+
+给定序列{a~i~}，幂级数![image-20231022213434626](assets/image-20231022213434626.png)称为该序列的**生成函数**。
+
+设p(x)=1+c~1~x+c~2~x^2^+……+c~n-1~x^n-1^+c~n~x^n^是GF(2)上的多项式，G(p(x))中任一序列{a~i~}的生成函数A(x)满足![image-20231022214849745](assets/image-20231022214849745.png)
+
+p(x)|q(x)的充要条件G(p(x))⊂G(q(x))
+
+设p(x)是GF(2)上的多项式，使p(x)|(x^p^-1)的最小p称为p(x)的周期或阶
+
+若序列{a~i~}的特征多项式p(x)定义在GF(2)上，p使p(x)的周期，则{a~i~}的周期r|p。
