--- a/密码学/密码学复习.md
+++ b/密码学/密码学复习.md
@@ -55,6 +55,10 @@ n级线性移位反馈寄存器，**m序列：周期等于2^n^-1**
 
 ## 线性移位寄存器的一元多项式表示
 
+
+
+递推关系。![image-20231023094228615](assets/image-20231023094228615.png)
+
 LFSR的**特征多项式**：p(x)=1+c~1~x+c~2~x^2^+……+c~n-1~x^n-1^+c~n~x^n^
 
 **G(p(x))**：n级线性移位寄存器的非恒零的2^n^-1个递推序列
@@ -68,3 +72,53 @@ p(x)|q(x)的充要条件G(p(x))⊂G(q(x))
 设p(x)是GF(2)上的多项式，使p(x)|(x^p^-1)的最小p称为p(x)的周期或阶
 
 若序列{a~i~}的特征多项式p(x)定义在GF(2)上，p使p(x)的周期，则{a~i~}的周期r|p。
+
+仅能被非0常数或自身的常数倍除尽，但不能被其他多项式除尽的多项式称为即约多项式或不可约多项式
+
+设p(x)是n次不可约多项式，周期为m，序列{a~i~}∈G(p(x))，则{a~i~}的周期为m。
+
+n级LSFR产生的序列有最大周期2^n^-1的必要条件是其特征多项式不可约。
+
+若n次不可约多项式p(x)的阶为2^n^-1，则p(x)是n次 本原多项式。
+
+设{a~i~}∈G(p(x))，{a~i~}为m序列的充分条件是p(x)为本原多项式。
+
+游程
+
+GF(2)上周期为T的序列{a~i~}的自相关函数为![image-20231023092531595](assets/image-20231023092531595.png)
+
+![image-20231023092544075](assets/image-20231023092544075.png)
+
+![image-20231023092710465](assets/image-20231023092710465.png)
+
+![image-20231023092746546](assets/image-20231023092746546.png)
+
+## 非线性序列
+
+### Geffe序列生成器
+
+LFSR~i~的特征多项式分别为n~i~次本原多项式，且n~i~两两互素，则Geffe序列的周期为![image-20231023141427824](assets/image-20231023141427824.png)
+
+![image-20231023141532782](assets/image-20231023141532782.png)
+
+![image-20231023141630476](assets/image-20231023141630476.png)
+
+### 利用JK触发器的非线性序列生成器
+
+![image-20231023141733965](assets/image-20231023141733965.png)
+
+![image-20231023141743097](assets/image-20231023141743097.png)
+
+![image-20231023141934037](assets/image-20231023141934037.png)
+
+![image-20231023142409523](assets/image-20231023142409523.png)![image-20231023142420734](assets/image-20231023142420734.png)
+
+![image-20231023143613629](assets/image-20231023143613629.png)
+
+### Pless生成器
+
+![image-20231023150041906](assets/image-20231023150041906.png)
+
+### 钟控序列生成器
+
+![image-20231023150159863](assets/image-20231023150159863.png)
