--- a/密码学/密码学复习.md
+++ b/密码学/密码学复习.md
@@ -252,7 +252,7 @@ Feistel网络的实现与以下参数和特性有关：
 
 ### 3个密钥的三重DES
 
- 	![image-20231024213301296](assets/image-20231024213301296.png)
+![image-20231024213301296](assets/image-20231024213301296.png)
 
 ![image-20231024213305911](assets/image-20231024213305911.png)
 
@@ -336,4 +336,69 @@ CFB模式除能获得保密性外，还能用于认证。
 OFB模式的优点是**传输过程中的比特错误不会被传播。**例如，C~1~中出现一比特错误，在解密结果中只有P~1~受到影响，以后各明文单元则不受影响。而在CFB中，C~1~也作为移位寄存器的输人，因此它的一比特错误会影响解密结果中各明文单元的值。
 OFB的缺点是它**比CFB模式更易受到对消息流的篡改攻击**，例如在密文中取1比特的补，那么在恢复的明文中相应位置的比特也为原比特的补。因此使得敌手有可能通过对消息校验部分的篡改和对数据部分的篡改，而以纠错码不能检测的方式篡改密文。
 
-## AES
+## AES算法 ----- Rijndael
+
+![image-20231025085541378](assets/image-20231025085541378.png)
+
+![image-20231025085701784](assets/image-20231025085701784.png)
+
+![image-20231025085933820](assets/image-20231025085933820.png)
+
+![image-20231025085944779](assets/image-20231025085944779.png)
+
+宽轨迹策略：轮函数中三个层
+![image-20231025090519680](assets/image-20231025090519680.png)
+
+### 算法说明
+
+迭代型分组密码，分组长度和密钥长度都可变，各自可以独立的指定为**128比特，192比特，256比特**。
+
+![image-20231025090643753](assets/image-20231025090643753.png)
+
+### 轮函数
+
+字节代换、行位移、列混合、密钥加
+
+#### 字节代换
+
+非线性代换
+
+代换表（S盒）是可逆的。
+
+![image-20231025091022067](assets/image-20231025091022067.png)
+
+#### 行位移
+
+是将状态阵列的各行进行循环位移，不同状态行的位移量不同。第0行不移动，第1行循环左移C~1~个字节，第2行循环左移C~2~个字节，第3行循环左移C~3~个字节。位移量C~1~、C~2~、C~3~的取值与N~b~有关。
+
+
+
+![image-20231025091311686](assets/image-20231025091311686.png)
+
+![image-20231025091618811](assets/image-20231025091618811.png)
+
+#### 列混合
+
+![image-20231025091646434](assets/image-20231025091646434.png)
+
+
+![image-20231025091849916](assets/image-20231025091849916.png)
+
+#### 密钥加
+
+![image-20231025092300441](assets/image-20231025092300441.png)
+
+### 密钥编排
+
+![image-20231025092448771](assets/image-20231025092448771.png)
+
+### 加密算法
+
+![image-20231025092608031](assets/image-20231025092608031.png)
+
+![image-20231025092617995](assets/image-20231025092617995.png)
+![image-20231025092629604](assets/image-20231025092629604.png)
+
+### 解密算法
+
+![image-20231025092733392](assets/image-20231025092733392.png)
