--- a/密码学/密码学复习.md
+++ b/密码学/密码学复习.md
@@ -1523,3 +1523,327 @@ ESP包的顶层格式。它包括以下域：
 
 <img src="assets/image-20231101215231756.png" alt="image-20231101215231756" style="zoom:67%;" />
 
+### 加密和认证算法
+
+ESP服务加密载荷数据、填充域、填充长度和邻接报头域，如果用于加密载荷的算法需要使用密码同步数据，如初始向量(IV)，则这些数据可以在载荷数据域的开始处显示的传输。如果包括IV，它虽然被看成是密文的一部分，但不会被加密。
+
+ICV域是可选的。仅当选择了完整性服务且该服务或者由一个单独的完整性算法提供，或者由用于ICV的组合式算法提供时，该域才会出现。ICV值是在加密完成后才被计算。这种处理顺序能使在对包解密前就可以对接收方的重放或伪造做出快速的检测与拒绝，从而可以潜在的降低拒绝服务攻击Dos的影响。它还对接收方对包的并行处理的可能性留有余地。也就是说，解密和完整性校验可以并行的处理。注意，由于ICV值未作加密保护，对ICV值的计算需要用带密钥的完整性算法。
+
+### 填充
+
+填充域由如下几个作用：
+
+- 如果加密算法要求明文为某个数目字节的整数倍（如分块加密中要求明文是单块长度的整数倍），填充域用于把明文（包括载荷数据、填充、填充长度、邻接报头域）扩展到需要的长度
+- ESP格式要求填充长度和邻接报头域为右对齐的32比特的字，同样，密文也是32比特整数倍，填充域用来保证这样的排列。
+- 增加额外的填充能隐藏载荷的实际长度，从而提供部分流量的保密。
+
+### 防重放攻击
+
+在建立一个新的SA时，发送方把序号计数器的初始值设为0，每次在SA上发送一个包，则发送方增加计数器的值并把这个值存放到序列号域中。这样第一个被使用的值为1.如果要求抗重放（默认），则发送方不许循环计数（循环计数值到达（3^32^-1）后返回到0），否则，一个序列号会对应很多合法的包。如果到了（3^32^-1）这个极限，发送方就会终止这个给SA，用新的密钥协商生成新的SA。
+
+IPSec认证文档规定接收方应该实现一个大小为W的窗口（W的默认值是64）.窗口的右端代表最大的序列号N，记录目前收到的合法包的最大序列号。序列号在（N-W+1）~ N的包已经被正确的接收（即被认证），并在窗口的相应位置上坐好标记。当接收到包时，内部的处理过程如下：
+
+1. 如果接收到的包超过了窗口中而且是新包，则验证消息验证码（MAC）。若验证通过，就标记窗口中相应的位置。
+2. 如果接收到的包超过了窗口的有边界而且是新包，则验证MAC。若验证通过，就让窗口前进以使得这个序列号成为窗口的右边界，并标记窗口中的相应位置。
+3. 如果接收到的包超过了窗口的左边界或者没有通过验证，就丢掉这个包，这是一个可审计事件。
+
+<img src="assets/image-20231102143407487.png" alt="image-20231102143407487" style="zoom:50%;" />
+
+### 传输模式和隧道模式
+
+在两个主机之间直接提供加密和认证(认证可选)。由传输模式的SA支持
+
+<img src="assets/image-20231102143718956.png" alt="image-20231102143718956" style="zoom:50%;" />
+
+使用隧道模式建立虚拟专用网络。由隧道模式的SA支持。
+<img src="assets/image-20231102143805874.png" alt="image-20231102143805874" style="zoom:50%;" />
+
+#### 传输模式ESP
+
+传输模式ESP用于加密和认证(认证可选)IP携带的数据（如TCP分段）。当传输模式使用IPv4时，ESP报头被插在传输层报头前面的IP包中，ESP尾（填充、填充长度和邻接报头域）被放在IP包的后面。如果选择认证，**ESP认证数据域就被放在ESP尾部之后**，**整个传输层分段和ESP尾部一起被加密**，**认证覆盖了所有的密文和ESP报头。**
+
+在IPv6的情况下，ESP被看成是端对端的载荷，也就是说，它不会被中间路由器检查或处理。因此ESP报头出现在IPv6基本报头、逐跳选项、路由选项和分段扩展报头之后。而目的可选拓展报头是出现在ESP报头之前还是之后是由语义来决定。**对于IPv6，加密将覆盖整个传输层分段、ESP尾部和目的可选扩展报头（如果目的可选扩展报头出现在ESP报头之后）**。**认证将覆盖密文和ESP报头。**
+
+关于传输模式操作总结如下：
+
+1. 在源端，将加密由ESP尾部和整个传输层分段组成的数据块，然后此块的密文区代其明文形成要传输的IP包。若是选择了认证，则加上认证。
+2. 之后，将包路由到目的地。每个中间路由器都要检查和处理IP报头和任何明文形式的IP扩展报头，但是不需要检查密文。
+3. 目的节点检查和处理IP报头和任何明文形式的IP扩展报头，然后基于ESP报头中的SPI，目的结点解密包的剩余部分，恢复明文形式的传输层分段。
+
+传输模式操作作为使用它的任何应用提供了保密性，这样就不用在每个应用中实现保密性。同时这种模式的操作也当然是搞笑的，仅增加了少量的IP包的长度。此模式的一个弱点是对传输包进行流量分析是可能的。
+
+#### 隧道模式
+
+隧道模式ESP是用来加密整个IP包。
+
+在这种模式下，ESP报头是包的前缀，所以包与ESP尾部被一同加密，该模式可用来组织流量分析。
+
+由于 IP 报头包含了目的地址，还可能包含源路由指示以及逐跳信息，所以不可能简单地传输带有 ESP 报头前缀的加密过的IP 包。中间路由器不能处理这样的包。因此，使用能为路由提供足够信息却没有为流量分析提供信息的新IP 报头封装整个模块(ESP 报头、密
+文和验证数据，如果它们存在) 是必要的。
+
+**传输模式适合于保护支持 ESP 特性的主机之间的连接**
+**隧道模式在包含防火墙或其他类型的用于保护可信内网不受外网侵害的安全网关的配置中是有用的。**
+
+**隧道模式情况下,加密发生在外部主机和安全网关之间，或者是发生在两个安全网关之间。**这就减轻了网内主机的加密负担，并通过降低所需密钥数来简化密钥分发任务。另外，它阻止基于最终目的地址的流量分析。
+
+考虑以下情况:外部主机希望与受防火墙保护的内部网络主机通信，ESP 在外部主机和防火墙中实现。从外部主机到内部主机的传输层分段将按照如下步骤传送：
+
+1. 源端将产生一个以目的地内部主机作为目的地址的内部IP 包。这个包以ESP 报头为前缀，然后加密包和 ESP 尾部，并且可能添加认证数据。再用目的地址是防火墙地址的新IP报头(基本报头和可选的扩展，如路由和 IPv6 的逐跳信息)封装数据块，从而形成了外部的IP 包。
+2. 将外部IP 包路由到目的地防火墙，每个中间路由器要检查和处理外部的IP 报头和任何外部IP 扩展报头，但不需要检查密文。
+3. 目的地防火墙检查和处理 IP 报头和任何外部 IP 扩展报头。然后目的地节点利用ESP 报头里的 SPI对IP 包剩余的部分解密，恢复内部I 包的明文，这个包就可以在内部网络中传输。
+4. 内部包在内部网络中经过零个或者多个路由器到达目的地主机
+
+![image-20231102150127779](assets/image-20231102150127779.png)
+
+<img src="assets/image-20231102150034450.png" alt="image-20231102150034450" style="zoom:50%;" />
+
+<img src="assets/image-20231102150217598.png" alt="image-20231102150217598" style="zoom:50%;" />
+
+### 安全关联组合
+
+单个SA 能实现 AH 或者 ESP 协议，但是不能同时实现这两者。有时，特定的流量能调用由 AH 和 ESP 提供的服务。另外，特定的流量可能需要主机间的 IPSec 服务和安全网关(比如防火墙)间的独立服务。在这些情况下，同一个流量可能需要多个 SA 才能获得想要的 IPSec 服务。术语**<u>安全关联束</u>**指的是为提供特定的 IPSec 服务集所需的一个 SA 序列安全关联束中的 SA 可以在不同节点上终止，也可以在同一个节点上终止。
+
+安全关联可以通过如下两种方式组合成安全关联束：
+
+1. **传输邻接**：这种方法指在没有激活隧道的情况下，对一个包使用多个安全协议。这种组合 AH和 ESP 的方法仅考虑了单层组合，更多层次的嵌套不会带来收益，因为所有的处理都是在一个 IPSec 实例处执行的，这个实例就是(最终)目的地。
+2. 隧道迭代:指通过 I 隧道应用多层安全协议。这种方法考虑了多层套，因为每个隧道都能在路径上的不同IPSec 节点处起始或终止。
+
+可以组合使用这两种方法，例如，在主机之间使用传输 SA，在安全网关的路径上使用隧道SA。
+
+#### 带认证选项的ESP
+
+首先，用户对要保护的数据使用ESP，然后添加认证数据域，这又分为以下两种情况：
+
+1. 传输模式ESP：被传送到主机的IP载荷使用了认证和加密，但是IP报头不受保护。
+2. 隧道模式ESP：认证作用于被发送到外部IP目的地址（如防火墙）的整个IP包，并在目的地进行认证。整个内部IP包由专用机制保护，这是为了被传送到内部IP目的地。
+
+在这两种情况下，认证作用于密文而不是明文。
+
+#### 传输邻接
+
+**在加密之后使用认证的另一种方法就是使用两个捆绑在一起的传输SA,内部是ESP SA，外部是 AH SA，在这种情况下，使用的 ESP 没有认证选项。(先加密后认证)**
+
+由于内部 SA 是一个传输 SA,所以加密仅作用于 IP 载荷。最后得到由 P 报头(可能有 IPv6 扩展报头)和接在其后的 ESP组成的包。之后，使用传输模式下的 AH，以使认证能作用于 ESP 和除了可变域之外的源IP 报头(与扩展报头)。与仅使用带 ESP 选项的单个 ESP SA 相比，这种方法的**优点是认证能覆盖更多的域(包括源 IP 地址和目的IP 地址)，缺点是有两个 SA 的开销，而不是一个**
+
+#### 传送-隧道束
+
+在加密之前使用认证有几个优点：
+
+1. 因为加密能保护认证数据，所以，中途截获数据并更改数据而不被发觉是不可能的。
+2. 可能会希望在目的地存储带着报文的认证信息以便将来查阅。如果将认证信息应用于未加密的消息，则进行这样的处理更加方便,否则，要重新加密消息来验证认证信息。
+
+在两个主机之间**先认证再加密**的一种方法是使用包括**内部 AH 的传输 SA 和外部 ESP的隧道 SA 的安全关联束**。此时，认证被作用于 IP 载荷和除了可变域之外的 IP 报头(包括扩展报头)，然后隧道模式 ESP 处理得到的 IP 包。结果是整个经过认证的内部包被加密，并增加了新的 IP 报头(和扩展报头)。
+
+#### 安全关联的基本组合
+
+![image-20231102151702562](assets/image-20231102151702562.png)
+![image-20231102151724044](assets/image-20231102151724044.png)
+![image-20231102151740320](assets/image-20231102151740320.png)
+
+## Internet密钥交换协议 （IKE）
+
+两种建立安全关联的机制：①静态安全关联建立机制 ②动态安全关联建立机制
+
+动态安全关联建立机制根据安全传输数据的需要，通过协议建立发送端至接收端的安全关联，协商与安全关联相关的参数。
+
+IKE就是一种动态建立安全关联并完成参数协商的协议。
+
+如果没有找到匹配的安全关联，启动IKE，根据IP分组匹配的安全策略的要求，动态建立安全关联。
+
+两个阶段：建立安全传输通道、建立安全关联
+其中第一个阶段建立安全通道的过程也称为建立IKE安全关联的过程，第二个阶段建立安全关联的过程称为建立IPSe安全关联的过程。
+
+### 因特网密钥交换
+
+IPSec的密钥管理部分包括密钥的确定和分发。一个典型的要求是两个应用之间的通信需要4个密钥：用于完整性和机密性的发送对和接受对。
+
+两种类型的密钥管理：
+
+1. 手动类型：系统管理者为每个系统手动配置系统自己的密钥和其他通信系统的密钥，这对小的、相对静态的环境是可行的。
+2. 自动类型：自动系统能够在需要时为SA创建密钥，并通过这种配置来使一个大型分布式系统中密钥的使用更加方便。
+
+默认的IPSec自动类型密钥管理协议是ISAKMP/Oakley，它由以下几部分组成。
+
+- Oakley密钥确定协议：基于Diffie-Hellman算法的密钥交换协议，但它提供额外的安全性，Oakley的通用性在于它没规定任何特殊的格式。
+- 互联网安全关联和密钥管理协议（ISAKMP）：为互联网密钥管理提供了一个框架，并提供了特定的协议支持，包括格式和安全属性协商。
+
+ISAKMP本身没有规定特定的密钥交换算法，而是由一组支持使用各种密钥交换算法的消息类型组成。Oakley是ISAKMP的最初版本中规定使用的特定密钥交换算法。
+
+在IKEv2中不在使用术语Oakley和ISAKMP，并且IKEv1中对Oakley和ISAKMP使用相比较，有着明显的查查吧。显然，基本功能还是相同的。这一节介绍IKEv2。
+
+### 密钥确定协议
+
+IKE密钥确定是Diffie-Hellman密钥交换算法的细化。
+
+Diffie-Hellman密钥交换算法优点：
+
+- 仅在需要时生成密钥，而不需要长时间的存储密钥，从而增加了安全性。
+- 交换仅需要全局参数达成一致，不需要其他预先存在的基础设施。
+
+Diffie-Hellman密钥交换算法弱点：
+
+- 它没有提供标识各方身份的任何信息。
+- 易受中间人攻击。
+- 算法是计算密集型的。易受拥塞攻击。
+
+IKE密钥确定的设计保持了Diffie-Hellman的优点，而弥补了以上不足。
+
+IKE密钥确定的特性：
+
+1. 它运用了一种称为Cookie的机制来防止拥塞攻击。
+2. 它允许双方协商得到一个组，在本质上，这就是详细列出Diffie-Hellman密钥交换的全局参数。
+3. 它使用随机数来阻止重放攻击。
+4. 它允许交换Diffiie-Hellman的公钥值
+5. 它认证Diffie-Hellman交换，以此阻止中间人攻击。
+
+Cookie交换要求各方在最初消息中发送一个伪随机数Cookie，此消息要得到对方的确认。此确认必须在Diffie-Hellman密钥交换的第一条消息中重复。如果源地址被伪造，那么攻击者就不会收到应答。这样，攻击者仅能让用户产生应答而不进行Diffie-Hellman计算。
+
+ISAKMP规定Cookie的产生必须满足三个基本要求：
+
+1. Cookie必须依赖于特定的通信方，这能防止攻击者得到一个正在使用真正的IP地址和UDP端口的Cookie，因此也就无法用该Cookie向目标主机发送大量的来自随机选取的IP地址和端口号的请求，以达到浪费主机资源的目的。
+2. 除了发起实体意外的任何实体都不可能产生被它承认的Cookie。这就意味着发起实体在产生和验证Cookie时，要使用本地的秘密信息，并且，根据任何特定的Cookie都不能推断出该秘密信息。实现这个要求的目的在于发起实体不需要保存它发行的Cookie的副本，仅在必要时能验证收到的Cookie应答，所以降低了泄露的可能。
+3. Cookie的产生和验证方法必须很快，以组织企图占用处理器资源的攻击。
+
+推荐的创建Cookie的方法是根据IP的源地址、目的地址、UDP的源端口、目的地端口和本地产生的秘密值来进行快速散列运算（如MD5）。
+
+IKE密钥确定支持使用不同的组进行Diffie-Hellman密钥交换。每个组都包括两个全局参数的定义和算法标识。当前规范包括如下组：
+
+<img src="assets/image-20231102163028031.png" alt="image-20231102163028031" style="zoom:50%;" />
+<img src="assets/image-20231102163112001.png" alt="image-20231102163112001" style="zoom: 67%;" />
+
+IKE密钥确定使用随机数来防止重放攻击，每个随机数都是本地产生的伪随机数。它在应答中出现，并在交换的特定部分被加密以保护它的可用性。
+
+IKE密钥确定可以使用三个不同的认证方法：
+
+- 数字签名：用双方均可以得到的散列码进行签名的方法来认证交换，每一方都用自己的私钥加密散列值。散列值是使用重要的参数(如用户、随机数)生成的。
+- 公钥加密：用发送方的私钥对参数 (如ID、随机数)加密来认证交换
+- 对称密钥加密：使用其他方法传送密钥，并用该密钥对交换参数进行对称加密，从而实现对密钥交换过程的认证。
+
+
+
+**IKEv2 交换**
+
+IKEv2 协议的消息交换以配对形式出现。
+
+前两对交换的消息称为**起始交换** (见图 9.11 (a))。交换的第一阶段中，双方交换有关密码算法的信息和连同随机数及Diffie-Hellman 值在内的其他他们愿意使用的安全参数。这轮交换的最终结果是他们建立了一个称为 IKE SA 的特别安全关联(见图 9.2)。该 SA 为通信方随后要在其上进行消息交换的安全通道定义参数。因此，随后的任何IKE 消息交换都受加密和消息认证保护。
+
+在交换的第二阶段，通信双方相互认证和建立第一个IPSec SA，并将之存于 SADB 以便保护正常通信(亦即非 IKE)之用。因此就通常的应用，建立一个初次安全关联 SA 需要四类消息。
+
+CHEATE CHILD_SA 交换可用于建立进一步保护流量的 SA。信息交换用于交换管理信息，IKEv2 错误信息和其他通知。![image-20231102164040018](assets/image-20231102164040018.png)
+
+### 报头和载荷格式
+
+<img src="assets/image-20231102164332738.png" alt="image-20231102164332738" style="zoom:50%;" />
+
+IKE定义了建立、协商、修改和删除安全关联的程序和包的格式。作为安全关联建立的一部分，IKE定义了交换密钥生成和认证数据的载荷这些数据在和格式提供了独立于特定的密钥交换协议、加密算法和认证机制的统一框架。
+
+#### IKE报头格式
+
+IKE消息由一个IKE报头和其后的一个或多个载荷组成。实现必须在传输协议中支持UDP。
+
+报头格式：
+
+- 发起者SPI：64比特，一个由发起者选定的用于唯一标识IKE 安全关联（SA）的值。
+- 响应者SPI：64比特，一个由相应者选定的用于唯一标识IKE SA的值
+- 邻接载荷：8比特，指明消息中第一个载荷的类型
+- 主版本：4比特，指明正在使用的IKE的主版本
+- 从版本：4比特，指明正在使用的从版本，
+- 交换类型：8比特，指明交换类型。
+- 标志：8比特，指明这个IKE交换的特定的选项集。到目前为止定义了3个比特。发起者比特指明该包是否由发起者发送。版本比特指明传输者是否有能力使用一个比当前指明的版本号更高的一个主版本号。响应者比特指明该响应是否是对一个保护同样消息ID消息的响应。
+- 消息ID：32比特，用于控制丢包的再传请求与响应的匹配
+- 长度：32比特，以字节为单位的消息的总长度（报头及所有的载荷）
+
+#### IKE载荷类型
+
+所有的IKE 载荷都开始于相同的一般载荷报头(如图 9.12(b)所示)。
+
+如果某个载荷是这个消息中的最后一个载荷，则邻接载荷域的值为零，否则，邻接载荷的类型就是邻接载荷域的值。
+
+载荷长度域指明以学节为单位的载荷与一般载荷报头的长度和。
+
+当发送方不能识别前一个载荷的邻接载荷的类型码时，发送方希望得到发送收据以便浏览该载荷，这时临界比特值取 0。当发送方不能识别该载荷类型，并且发送方希望得到该载荷收据以便拒绝该主体消息时，临界比特值设定为 1。
+
+SA载荷用于开始建立一个 SA。该载荷有一个复杂的层次结构。该载荷可能包括多种提议。每个提议又可能包括多种协议。每个协议又会包括多种转换。每个转换又包含多个属性。这些情况在一个载荷内以子结构的方式说明如下:
+
+- 提议：这一子结构包括一个提议号、一个协议ID(AH、ESP或IKE)、一个转换书指示器和一个转换子结构。如果一个提议中包括多于一个的协议时，则会有一个与提议数相同的并发提议子结构。
+- 转换：不同的协议支持不同的转换类型。转换的原意是用来定义一个特别协议使用的密码算法的。
+- 属性：每一个转换可能包括一些修改和完善转换规范的属性，如密钥长度。
+
+![image-20231102172845373](assets/image-20231102172845373.png)
+
+密钥交换载荷可用于各种密钥交换技术，包括Oakley、Diffie-Hellman和PGP使用的基于RSA的密钥交换。密钥交换数据域包含产生会话密钥所需要的数据，并独立于所使用的密钥交换算法。
+
+标识载荷用于确认通信双方的身份，也可用来确认信息的真实性。典型的ID数据域包括IPv4或IPv6的地址
+
+证书载荷传送公钥证书。证书编码域标明证书的类型或者证书相关的一些信息，可能包括如下部分：
+
+- PKCS#7 包装的X.509证书
+- PGP证书
+- DNS签名密钥
+- X.509证书——签名
+- X.509证书——密钥交换
+- kerberos令牌
+- 证书撤销列表（CRL）
+- 认证撤销列表（ARL）
+- SPKI证书
+
+在证书交换的任何时候，发送方都可能包含一个证书请求载荷来请求其他通信实体的证书。载荷可以列出多个可接受的证书类型和多个可接受认证中心（CA）。
+
+认证载荷包括用于消息认证目的的数据。目前定义的认证方法有RSA数字签名、共享密钥消息完整性码和DSS数字签名。
+
+随机数载荷包括用于交互的随机数据，它用来阻止重放攻击。
+
+公告载荷包括与该SA或SA协商相关的错误或状态信息，下面列出已经定义的IKE公告信息。
+![image-20231102190027558](assets/image-20231102190027558.png)
+
+删除载荷指明一个或多个发送方从其数据库里删除的且不在有效的SA。
+
+供应商ID载荷包含一个供应商定义的常数。该常数供应商用于标识和识别它们产品实现的远程实例。这种机制可以使一个供应商在保持向后兼容情况下实验新特性。
+
+流量选择器载荷允许用户识别IPSec 服务器正在处理的数据包流。
+
+被加密载荷包含其他加密形式的载荷。加密后的载荷格式类似于 ESP。它可能包含在加密算法要求下的初始向量IV 和认证需要的ICV。
+
+配置载荷用于IKE 用户之间交换配置信息。
+
+可扩展认证协议 (EAP) 载荷允许使用 EAP 对IKE SA 认证
+
+### IKE相关配置
+
+假定终端A要求与终端A通过HTTP访问Web服务器B相关的IP分组封装成AH报文。终端A制订一条安全策略，该条安全策略中分类IP分组的标准如下：
+
+- 源IP地址=3.3.3.3/32
+- 目的IP地址=7.7.7.7/32
+- 目的端口号=80
+- 协议类型=TCP
+
+该条安全策略中对符合分类的IP分组实施的安全操作如下。
+
+- 安全协议=AH
+- MAC算法=HMAC-MD5-96
+
+对于如图 6.14 所示的需要建立动态安全关联的发送端和接收端,终端 A和 Web 服务器均需完成以下与IKE 动态建立安全关联有关的配置
+![image-20231102192546557](assets/image-20231102192546557.png)
+IKE 动态建立安全关联过程分为两个阶段,第一个阶段是建立安全传输通道,第二个阶段是建立安全关联。建立安全传输通道的目的是可以安全传输为建立安全关联而相互交换的信息。相同发送端和接收端之间只需要建立一条安全传输通道，通过该安全传输通道可以建立多个安全关联。
+
+第一阶段建立安全通道的过程也称为建立IKE 安全关联的过程，为了区分,把第二阶段建立安全关联的过程称为建立 IPSec 安全关联过程。
+
+终端 A 和 Web 服务器 B之间建立安全传输通道前，需要相互鉴别对方身份，因此需要约定鉴别方式。为了安全传输为建立 IPSec 安全关联而相互交换的信息，建立安全传输通道时,需要约定加密算法和 MAC算法、加密密钥和 MAC 密等。建立IPSec 安全关联时,需要约定安全协议 AH、MAC算法 HMAC-MD5-96 和MAC 密等。
+
+<img src="assets/image-20231102192747971.png" alt="image-20231102192747971" style="zoom:50%;" />
+
+### IKE建立安全关联过程
+
+![image-20231102192942554](assets/image-20231102192942554.png)
+![image-20231102193001445](assets/image-20231102193001445.png)
+![image-20231102193012184](assets/image-20231102193012184.png)
+
+
+
+
+## 密码套件
+
+![image-20231102191740050](assets/image-20231102191740050.png)
+![image-20231102191757511](assets/image-20231102191757511.png)
+![image-20231102191812950](assets/image-20231102191812950.png)
+![image-20231102191825874](assets/image-20231102191825874.png)
