--- a/计网/数据链路层.md
+++ b/计网/数据链路层.md
@@ -200,7 +200,7 @@ CSMA/CD已成功应用于使用有线连接的局域网
 CSMA/CD还能从冲突中恢复
 **截断二进制指数退避算法：**
 确定基本退避时间：2t(即争用期)
-参数k，重传次数，k不超过10，**k=min[重传次数，10]**
+参数k，k不超过10，**k=min[重传次数，10]**
 从离散的整数集合[0,1,……,2^k^-1]中随机去一个数r，重传所需的退避时间就是r倍的基本退避时间即r*2t
 当重传达到**16次**仍不成功时，说明网络太挤，认为此帧永远无法正确发出，抛弃此帧，并向高层报告出错
 在争用期检测到碰撞时立即停止发送，执行指数退避算法
