--- a/politics/习思2.0.md
+++ b/politics/习思2.0.md
@@ -736,3 +736,256 @@
 
 ## 坚持总体国家安全观
 
+### 科学内涵
+
+国家安全是民族复习的根基，社会稳定是国家强盛的前提
+
+丰富内涵：
+
+实践要求：以人民安全为宗旨，以政治安全为根本，以经济安全为基础，以军事、科技、文化、社会安全为保障。
+
+重大意义：
+
+具体措施：
+
+1. 健全国家安全体系
+2. 增强维护国家安全能力
+3. 提高公共安全治理水平
+4. 完善社会治理体系
+
+### 坚持走中国特色国家安全道路
+
+1. 坚持统筹发展和安全两件大事
+2. 坚持人民安全、政治安全、国家利益至上有机统一。
+3. 坚持维护和塑造国家安全
+4. 坚持科学统筹的根本方法
+5. 坚持党对国家安全工作的绝对领导
+
+### 着力防范化解重大风险
+
+## 加快国防和军队现代化
+
+### 坚持习近平强军思想
+
+#### 科学内涵
+
+1. 强军使命。明确强国必须强军，巩固国防和强大人民军队是新时代坚持和发展中国特色社会主义、实现中华民族伟大复兴的战略支撑。
+2. 强军目标。明确党在新时代的强军目标是建设一支听党指挥、能打胜仗、作风优良的人民军队，必须听国家现代化进程相一致，力争到2035年基本实现国防和军队现代化，到21世纪中叶把人民军队全面建成世界一流军队。
+3. 强军之魂。明确党对军队的绝对领导是人民军队的建军之本、强军之魂。
+4. 强军之要。明确军队是要准备打仗的
+5. 强军之基。明确作风优良是我军鲜明特色和政治优势。
+6. 强军布局，明确推进强军事业必须坚持政治建军、改革强军、科技强军、人才强军、依法治军，全面提高革命化现代化正规化水平。政治建军是人民军队的立军之本；改革是我军发展壮大、制胜未来的关键一招；科技是现代战争的核心战斗力，一流军队必须有一流军事科技；依法治军、从严治军是我们党建军治军的基本方略。
+7. 强军关键。明确改革是强军的必由之路
+8. 强军动力。明确创新是引领发展的第一动力，必须坚持向科技创新要战斗力
+9. 强军保障。明确现代化军队必须构建中国特色军事法治体系
+10. 强军路径。明确军民融合发展是兴国之举、强军之策，必须坚持发展和安全兼顾、富国和强军统一，形成全要素、多领域、高效益军民融合深度发展格局
+
+### 实现党在新时代的强军目标
+
+1. 听党指挥是灵魂，决定军队建设的政治方向。党对军队军队领导的根本原则和制度，发端于南昌起义，奠基于三湾改编，定型于古田会议，是人民军队完全区别于一切旧军队的政治特征和根本优势。
+2. 能打胜仗是核心，反映军队的根本职能和军队建设的根本方向。能打仗、打胜仗是党和人民对军队的根本要求，是军队使命职责之所在、军队存在的根本价值治所在。牢固树立战斗力这个唯一的根本的标准。
+3. 作风优良是保证，关系军队的性质、宗旨、本色。在长期实践中，我军培养和形成了一整套光荣传统和优良作风。
+
+### 构建一体化的国家战略体系和能力（军民融合发展战略）
+
+经济建设是国防建设的基本依托。
+
+只有把国防建设搞上去，经济建设才能有更加坚强的安全保障。
+
+## 坚持“一国两制”，推进祖国统一
+
+### 全面准确贯彻“一国两制”方针
+
+内涵：“一国”是实行“两制”的前提和基础，“两制”从属和派生于“一国”，并统一于“一国”之内。“一国两制”的提出是为了实现和维护国家统一。国家主体坚持实行社会主义制度，是香港、澳门实行资本主义制度、保持繁荣稳定的前提和保障；香港、澳门依照基本法实行“港人治港”、“澳人治澳”、高度自治，必须充分尊重国家主体实行的社会主义制度。
+
+底线：任何危害国家主权安全，挑战中央权力和特别行政区基本法权威，利用香港、澳门对内地进行渗透破坏的活动，都是对底线的触碰，都是绝不能允许的。
+
+意义：是中国为国际社会解决类似问题提供的一个新思路新方案，是中华民族为世界和平与发展作出的新贡献。“一国两制”是解决历史遗留的香港、澳门问题的最佳方案，也是香港、澳门回归后保持长期繁荣稳定的最佳制度
+
+### 坚持和完善“一国两制”：”四个必须“
+
+2022年7月1日，习近平在庆祝香港回归祖国25周年大会暨香港特别行政区第六届政府就职典礼上的讲话强调了“四个必须”
+
+- 第一，必须全面贯彻“一国两制”方针。
+- 第二，必须坚持中央全面管治权和保障特别行政区高度自治权相统一。中央政府对特别行政区拥有全面管治权，这是特别行政区高度自治权的源头，同时中央充分尊重和坚定维护特别行政区依法享有的高度自治权。
+- 第三，必须落实“爱国者治港”。把香港特别行政区管治权牢牢掌握在爱国者手中，这是保证香港长治久安的必然要求。
+- 第四，必须保持香港的独特地位和优势。
+
+## 实行祖国完全统一
+
+- 第一，一个中国原则是两岸关系的政治基础
+- 第二，体现一个中国原则的“九二共识”明确界定了两岸关系的根本性质，是确保两岸关系和平发展的关键
+- 第三，“和平统一、一国两制”是实现国家统一的最佳方式
+- 第四，坚决反对和遏制任何形式的“台独”。“台独”分裂势力及其活动损害国家主权和领土完整，是两岸关系和平发展的最大障碍，是台海和平稳定的最大威胁。
+- 第五，台湾问题是中国的内政，事关中国核心利益和中国人民民族情感，不容任何外来干涉。
+
+# 中国特色大国外交
+
+- 坚持习近平外交思想
+- 坚持走和平发展道路
+- 推动构建人类命运共同体
+
+## 坚持习近平外交思想
+
+科学内涵
+
+核心要义，十个方面：
+
+- (1) 坚持以维护党中央权威为统领，加强党对对外工作的集中统一领导
+- (2) 坚持以实现中华民族伟大复兴为使命推进中国特色大国外交
+- (3) 坚持以维护世界和平、促进共同发展为宗旨推动构建人类命运共同体。
+- (4)坚持以中国特色社会主义为根本增强战略自信。
+- (5)坚持以共商共建共享为原则推动“一带一路”建设
+- (6)坚持以相互尊重、合作共赢为基础走和平发展道路
+- (7) 坚持以深化外交布局为依托打造全球伙伴关系,
+- (8)坚持以公平正义为理念引领全球治理体系改革
+- (9)坚持以国家核心利益为底线维护国家主权、安全、发展利益。
+- (10)坚持以对外工作优良传统和时代特征相结合为方向塑造中国外交独特风范
+
+根本遵循：
+
+- (1)习近平外交思想是对新中国外交理论的继承与发展。
+- (2)习近平外交思想是 21 世纪马克思主义在外交领域的最新成果。
+- (3)习近平外交思想是对中华优秀传统文化的传承创新
+- (4)习近平外交思想是对传统国际关系理论的扬弃超越。
+
+## 坚持走和平发展道路
+
+### 世界正处于大发展大变革大调整时期
+
+具体表现:
+
+1. 世界多极化
+2. 经济全球化
+3. 文化多样化
+4. 社会信息化
+5. 科学技术孕育新突破
+
+### 坚持独立自主和平外交政策
+
+中国独立自主的和平外交政策的内涵：
+
+- 就是把国家主权和安全放在第一位，坚定地维护我国的国家利益，反对任何国家损害我国的独立、主权、安全和尊严
+- 就是从我国人民和世界人民的根本利益出发，对于一切国际事务，都要根据事情本身的是非曲直决定自己的立场和政策秉持公道，伸张正义，不屈从于任何外来压力
+- 就是坚持各国的事务应由本国政府和人民决定世界上的事情应由各国政府和人民平等协商，反对一切形式的霸权主义和强权政治
+- 就是主张和平解决国际争端和热点问题，反对动辄诉诸武力或以武力相威胁，反对颠覆别国合法政权反对一切形式的恐怖主义
+- 就是奉行防御性的国防政策，中国的发展是世界和平力量的增长无论发展到什么程度，中国永远不称霸、永远不搞扩张。
+
+中国坚定不移地信奉独立自主地和平外交政策地依据：
+
+- 第一，走和平发展道路，是由我国的社会主义性质和在国际上的地位所决定的，是从历史、现实、未来的客观判断中得出的结论，是思想自信和实践自觉的有机统一
+- 第二，中国走和平发展道路的自信和自觉，来源于中华文明的深厚渊源，来源于对实现中国发展目标条件的认知，来源于对世界发展大势的把握。
+
+中国走和平发展道路地意义：走和平发展道路，对中国有利，对亚洲有利，对世界也有利。
+
+### 推进建设新型国际关系
+
+”新“在合作共赢
+
+中国倡导建立相互尊重、公平正义、合作共赢地新型国际关系的核心：维护联合国宪章的宗旨和原则，维护不干涉别国内政和尊重国家主权、独立、领土完整的国际关系基本准则，维护联合国及其安理会对世界和平承担的首要责任，开展对话和合作，而不是对抗；实现双赢和共赢，而不是单赢。
+
+基本主张：
+
+- 第一，要坚持维护国家核心利益。中国始终把坚决维护国家主权、安全、发展利益作为外交工作的基本出发点和落脚点。
+- 第二，要在和平共处五项原则基础上发展同世界各国的友好合作。要按照大国是关键、周边是首要、发展中国家是基础、多边是舞台的外交工作布局，建立新型国际关系。
+- 第三，要积极参与全球治理体系改革和建设。中国践行共商共建共享的全球治理观
+- 第四，要加强涉外法律工作，完善涉外法律 法规体系。
+
+## 推动构建人类命运共同体
+
+提出背景：2015
+
+构建人类命运共同体思想，具有鲜明的时代背景：从国际上看、从国内来看
+
+科学内涵：核心就是“建设持久和平、普遍安全、共同繁荣、开放包容、清洁美丽的世界”
+
+重大意义：
+
+### 促进“一带一路”国际合作
+
+提出背景：2013年，共建“丝绸之路经济带”、“21世纪海上丝绸之路”重大倡议。
+
+共建“一带一路”倡议，目的是聚焦互联互通，深化务实合作，携手应对人类面临的各种风险挑战，实现互利共赢、共同发展
+
+“一带一路”倡议的基本主张：共建“一带一路”倡议的核心内涵，是**促进基础设施建设和互联互通，加强经济政策协调和发展战略对接，促进协同联动发展，实现共同繁荣**。这一倡议秉持和遵循共商**共建共享原则，努力实现政策沟通、设施联通、贸易畅通、资金融通、民心相通**，这是发展的倡议、合作的倡议、开放的倡议。这一倡议要实现的最高目标就是各方携手应对世界经济面临的挑战，开创发展新机遇，谋求发展新动力，拓展发展新空间，实现优势互补、互利共赢，不断朝着人类命运共同体方向迈进。
+
+取得的积极成果：我国统筹谋划推动高质量发展、构建新发展格局和共建“一带一路”，以基础设施“硬联通作为重要方向，以规则标准“软联通”作为重要支撑，把同共建国家人民“心联通”作为重要基础，推动共建“一带一路”高质量发展，取得实打实、沉甸甸的成就。通过共建“一带一路“提高了国内各区域开放水平，拓展了对外开放领域，推动了制度型开放，构建了广泛的朋友圈探索了促进共同发展的新路子，实现了同共建国家互利共赢。
+
+推动共建”一带一路”高质量发展
+
+1. 夯实发展根基
+2. 稳步拓展合作新领域
+3. 更好服务构建新发展格局
+4. 全面强化风险防控
+5. 强化统筹协调
+
+# 坚持和强化党的领导
+
+## 实现中华民族伟大复习关键在党
+
+### 中国共产党的领导地位是历史和人民的选择
+
+中国共产党是中国工人阶级的先锋队，同时使中国人民和中华民族的先锋队，是中国特色社会主义事业的领导核心。
+
+百年来，党领导人民浴血奋战、百折不挠，创造了新民主主义革命的伟大成就；自力更生、奋发图强，创造了社会主义革命和建设的伟大成就；解放思想、锐意进取，创造了改革开放和社会主义现代化建设的伟大成就；自信自强、守正创新，创造了新时代中国特色社会主义的伟大成就。
+
+### 中国特色社会主义最本质的特征
+
+党的领导是中国特色社会主义最本质的特征
+
+党的领导是中国特色社会主义最本质的特征的原因：
+
+- 第一，这是由科学社会主义的理论逻辑所决定的
+- 第二，这是由中国特色社会主义产生与发展的历史逻辑所决定的
+- 第三，这是由中国特色社会主义迈向新征程的实践逻辑所决定的。
+
+党的领导是中国特色社会主义制度的最大优势
+
+党的领导是中国特色社会主义制度的最大优势的原因：
+
+- 第一，中国特色社会主义制度是党领导人民创建的
+- 第二，党的领导是充分发挥中国特色社会主义制度优势的根本保障
+- 第三，党的自身优势是中国特色社会主义制度优势的来源。
+
+### 新时代中国共产党的历史使命
+
+统揽伟大斗争、伟大工程、伟大事业、伟大梦想。
+
+在全面建成小康社会的基础上全面建成社会主义现代化强国，实现中华民族伟大复兴。
+实现伟大梦想，必须进行具有许多新的历史特点的伟大斗争。
+实现伟大梦想，必须深入推进党的建设新的伟大工程
+实现伟大梦想，必须推进中国特色社会主义伟大事业。
+
+“四个伟大”的关系:伟大斗争、伟大工程、伟大事业、伟大梦想是一个紧密联系、相互贯通、相互作用、有机统一的整体，统一于新时代坚持和发展中国特色社会主义伟大实践
+
+起决定性作用的是党的建设伟大工程。
+
+## 坚持党对一切工作的领导
+
+- 党是最高政治领导力量
+- 党的领导制度是我国的根本领导制度
+- 确保党始终总揽全局协调各方
+  - 必须增强政治意识、大局意识、核心意识、看齐意识，自觉维护党中央权威和集中统一领导，自觉在思想上政治上行动上同党中央保持高度一致。
+  - 必须坚持和完善党的领导的机制体制
+  - 必须坚持党的民主集中制原则。
+- 全面增强党的执政本领
+  - 增强学习本领
+  - 增强政治领导本领
+  - 增强改革创新本领
+  - 增强科学发展本领
+  - 增强依法执政本领
+  - 增强群众工作本领
+  - 增强狠抓落实本领
+  - 增强驾驭风险本领
+
+### 深入推进新时代党的建设新的伟大工程
+
+党的二十大报告强调，要健全全面从严治党体系，全面推进党的自我净化、自我完善、自我革新、自我提高，使我们党坚守初心使命，始终成为中国特色社会主义事业的坚强领导核心。
+
+- 第一，坚持和加强党中央集中统一领导。
+- 第二，坚持不懈用新时代中国特色社会主义思想凝心铸魂。用党的创新理论武装全党是党的思想建设的根本任务。
+- 第三，完善党的自我革命制度规范体系。坚持制度治党、依规治党，以党章为根本，以民主集中制为核心，完善党内法规制度体系，增强党内法规权威性和执行力，形成坚持真理、修正错误，发现问题、纠正偏差的机制。
+- 第四，建设堪当民族复兴重任的高素质干部队伍。
+- 第五，增强党组织政治功能和组织功能。严密的组织体系是党的优势所在、力量所在。
+- 第六，坚持以严的基调强化正风肃纪。党风问题关系执政党的生死存亡。
+- 第七，坚决打赢反腐败斗争攻坚战持久战。腐败是危害党的生命力和战斗力的最大毒瘤反腐败是最彻底的自我革命
