--- a/数据结构/数据结构复习/栈与队列.md
+++ b/数据结构/数据结构复习/栈与队列.md
@@ -12,3 +12,29 @@ n个不同的元素进栈，出栈元素不同排列的个数为![image-20231017
 
 ![image-20231104214321431](assets/image-20231104214321431.png)
 
+# 栈与迭代
+
+![image-20231107152856105](assets/image-20231107152856105.png)
+
+![image-20231107152905561](assets/image-20231107152905561.png)
+
+# 队列
+
+基本运算
+
+![image-20231107153107989](assets/image-20231107153107989.png)
+
+## **链队列－－队列采用链式存储结构**
+
+
+
+## **顺序队列－－队列采用顺序存储结构**
+
+
+
+# 循环队列
+
+顺序存储方式循环队列，队列满判断的解决方法(两种方法都会产生一个空闲位置)：
+
+1. 引入一个标志变量
+2. 入队前测试尾指针在循环意义下加一后是否等于头指针，即 (sq->rear+1)%MAXSIZE == sq->front
