--- a/计网/数据链路层.md
+++ b/计网/数据链路层.md
@@ -52,6 +52,8 @@
 从右开始数第1、2、4、8、……、2^i^位为检错码
 S1负责二进制中最低第一位为1位子的检验，S2负责二进制中最低第二位为1位子的检验（模2加）
 
+确定一位纠错能力海明码的位数：n+k≤2^k^-1
+
 **汉明距离**
 
 两个(相同长度)字的汉明距离是对应位不同的数量。我们以d (x , y) 表示两个字x和 y之间的汉明距离。
@@ -63,7 +65,7 @@ S1负责二进制中最低第一位为1位子的检验，S2负责二进制中最
 
 **为了保证检测出所有情况下最多 s个差错，块编码中最小汉明距离一定是s+1 。**
 
-**为了保证纠正所有情况下最多 t个差错，块钱码中的最小汉明距离是2t+1 。**
+**为了保证纠正所有情况下最多 t个差错，块编码中的最小汉明距离是2t+1 。**
 
 ![image-20231021210630544](assets/image-20231021210630544.png) d~min~=3 。这个编码能检测到最多 2个差错
 
