--- a/politics/习思.md
+++ b/politics/习思.md
@@ -1067,3 +1067,65 @@
 - 第五，增强党组织政治功能和组织功能。严密的组织体系是党的优势所在、力量所在。
 - 第六，坚持以严的基调强化正风肃纪。党风问题关系执政党的生死存亡。
 - 第七，坚决打赢反腐败斗争攻坚战持久战。腐败是危害党的生命力和战斗力的最大毒瘤反腐败是最彻底的自我革命
+
+
+
+
+
+# 八个明确，十四个坚持
+
+　　在中国共产党第十九次全国代表大会开幕会上，习近平代表十八届中央委员会向大会作报告。
+
+　　习近平指出，我们党坚持以马克思列宁主义、毛泽东思想、邓小平理论、“三个代表”重要思想、科学发展观为指导，坚持解放思想、实事求是、与时俱进、求真务实，坚持辩证唯物主义和历史唯物主义，紧密结合新的时代条件和实践要求，以全新的视野深化对共产党执政规律、社会主义建设规律、人类社会发展规律的认识，进行艰辛理论探索，取得重大理论创新成果，形成了新时代中国特色社会主义思想。
+
+　　**新时代中国特色社会主义思想**
+
+　　——明确坚持和发展中国特色社会主义，总任务是实现社会主义现代化和中华民族伟大复兴，在全面建成小康社会的基础上，分两步走在本世纪中叶建成富强民主文明和谐美丽的社会主义现代化强国；
+
+　　——明确新时代我国社会主要矛盾是人民日益增长的美好生活需要和不平衡不充分的发展之间的矛盾，必须坚持以人民为中心的发展思想，不断促进人的全面发展、全体人民共同富裕；
+
+　　——明确中国特色社会主义事业总体布局是“五位一体”、战略布局是“四个全面”，强调坚定道路自信、理论自信、制度自信、文化自信；
+
+　　——明确全面深化改革总目标是完善和发展中国特色社会主义制度、推进国家治理体系和治理能力现代化；
+
+　　——明确全面推进依法治国总目标是建设中国特色社会主义法治体系、建设社会主义法治国家；
+
+　　——明确党在新时代的强军目标是建设一支听党指挥、能打胜仗、作风优良的人民军队，把人民军队建设成为世界一流军队；
+
+　　——明确中国特色大国外交要推动构建新型国际关系，推动构建人类命运共同体；
+
+　　——明确中国特色社会主义最本质的特征是中国共产党领导，中国特色社会主义制度的最大优势是中国共产党领导，党是最高政治领导力量，提出新时代党的建设总要求，突出政治建设在党的建设中的重要地位。
+
+　　新时代中国特色社会主义思想，是对马克思列宁主义、毛泽东思想、邓小平理论、“三个代表”重要思想、科学发展观的继承和发展，是马克思主义中国化最新成果，是党和人民实践经验和集体智慧的结晶，是中国特色社会主义理论体系的重要组成部分，是全党全国人民为实现中华民族伟大复兴而奋斗的行动指南，必须长期坚持并不断发展。
+
+　　**全党要深刻领会新时代中国特色社会主义思想的精神实质和丰富内涵，在各项工作中全面准确贯彻落实。**
+
+　　——坚持党对一切工作的领导。
+
+　　——坚持以人民为中心。
+
+　　——坚持全面深化改革。
+
+　　——坚持新发展理念。
+
+　　——坚持人民当家作主。
+
+　　——坚持全面依法治国。
+
+　　——坚持社会主义核心价值体系。
+
+　　——坚持在发展中保障和改善民生。
+
+　　——坚持人与自然和谐共生。
+
+　　——坚持总体国家安全观。
+
+　　——坚持党对人民军队的绝对领导。
+
+　　——坚持“一国两制”和推进祖国统一。
+
+　　——坚持推动构建人类命运共同体。
+
+　　——坚持全面从严治党。
+
+　　以上十四条，构成新时代坚持和发展中国特色社会主义的基本方略。全党同志必须全面贯彻党的基本理论、基本路线、基本方略，更好引领党和人民事业发展。
