--- a/计网/网络层.md
+++ b/计网/网络层.md
@@ -402,12 +402,12 @@ ICMP 差错报告报文用于目标主机或到目标主机路径上的路由器
 4. **参数问题。**当路由器或目的主机收到的数据报的首部中有的字段的值不正确时，就丢弃该数据报，并向源点发送参数问题报文。
 5. **改变路由(重定向)**。路由器把改变路由报文发送给主机，让主机知道下次应将数据报发送给另外的路由器(可通过更好的路由)。
 
-不应发送 ICMP 差错报告报文的几种情况如下:
+**不应发送 ICMP 差错报告报文的几种情况如下:**
 
-1. ICMP 差错报告报文不再发送 ICMP 差错报告报文。
-2. 对第一个分片的数据报片的所有后续数据报片都不发送ICMP 差错报告报文
-3. 对具有组播地址的数据报都不发送ICMP 差错报告报文。
-4. 对具有特殊地址(如127.0.0.0或0.0.0.0)的数据报不发送ICMP 差错报告报文。
+1. **ICMP 差错报告报文不再发送 ICMP 差错报告报文。**
+2. **对第一个分片的数据报片的所有后续数据报片都不发送ICMP 差错报告报文**
+3. **对具有组播地址的数据报都不发送ICMP 差错报告报文。**
+4. **对具有特殊地址(如127.0.0.0或0.0.0.0)的数据报不发送ICMP 差错报告报文。**
 
 ICMP 询问报文有 4 种类型:
 
