--- a/politics/习思.md
+++ b/politics/习思.md
@@ -709,6 +709,14 @@
 
 ## 全面依法治国
 
+科学立法、严格执法、公正司法、全民守法
+
+法治国家是法治建设的目标
+
+法治政府是建设法治国家的重点、法治政府建设对法治国家、法治社会建设具有示范带动作用。
+
+法治社会是构筑法治国家的基础
+
 ### 坚持习近平法治思想
 
 习近平法治思想的重大意义：全面依法治国是中国特色社会主义的本质要求和重要保障
@@ -766,7 +774,7 @@
 
 我们党面临的执政环境是复杂的，影响党的先进性、弱化党的纯洁性的因素也是复杂的，党内存在的思想不纯、组织不纯、作风不纯等突出问题尚未得到根本解决。党面临的**执政考验、改革开放考验、市场经济考验、外部环境考验**具有长期性和复杂性，党面临的**精神懈怠危险、能力不足危险、脱离群众危险、消极腐败危险**具有尖锐性和严峻性。**我们要落实新时代党的建设总要求，健全全面从严治党体系，全面推进党的自我净化、自我完善、自我革新、自我提高，使我们党坚守初心使命，始终成为中国特色社会主义事业的坚强领导核心。**
 
-**总要求**：坚持和加强党的全面领导，坚持党要管党、全面从严治党，以加强党的长期执政能力建设、先进性和纯洁性建设为主线，以党的政治建设为统领，以坚定理想信念宗旨为根基，以调动全党积极性、主动性、创造性为着力点，全面推进党的政治建设、思想建设、组织建设、作风建设、纪律建设，把制度建设贯穿其中，深入推进反腐败斗争，不断提高党的建设质量，把党建设成为始终走在时代前列、人民衷心拥护、勇于自我革命、经得起各种风浪考验、朝气蓬勃的马克思主义执政党。
+**总要求**：坚持和加强党的全面领导，坚持党要管党、全面从严治党，以加强党的长期执政能力建设、先进性和纯洁性建设为**主线**，以党的政治建设为**统领**，以坚定理想信念宗旨为**根基**，以调动全党积极性、主动性、创造性为**着力点**，全面推进党的政治建设、思想建设、组织建设、作风建设、纪律建设，**把制度建设贯穿其中**，深入推进反腐败斗争，不断提高党的建设质量，把党建设成为始终走在时代前列、人民衷心拥护、勇于自我革命、经得起各种风浪考验、朝气蓬勃的马克思主义执政党。
 
 - 第一，原则是坚持和加强党的全面领导
 - 第二，方针是坚持党要管党，全面从严治党。“全面”是基础；“严”是关键；“治”是要害；
@@ -830,6 +838,13 @@
 2. 增强维护国家安全能力
 3. 提高公共安全治理水平
 4. 完善社会治理体系
+
+要统筹：
+
+1. 外部安全和内部安全
+2. 国土安全和国民安全
+3. 传统安全和非传统安全
+4. 自身安全和共同安全
 
 ### 坚持走中国特色国家安全道路
 
