--- a/politics/近代史.md
+++ b/politics/近代史.md
@@ -8,6 +8,8 @@
 
 1840年6月鸦片战争
 
+**1840年到1919年：旧民主主义革命时期**
+
 1842年8月29日中英《南京条约》
 
 1843年10月中英《虎门条约》、魏源《海国图志》
@@ -26,11 +28,11 @@
 
 1858年，5月中俄《瑷珲条约》。6月中英《天津条约》。
 
-19世纪60年代初洋务运动兴起
+1860年至1890年：洋务运动兴起（19世纪60年代初至19世纪90年代）
 
 1860年中英法俄《北京条约》；上海江南制造总局（曾国藩支持、李鸿章筹办），金陵机器局（李鸿章）
 
-1861年4月，美国南北战争。
+1861年4月12日 至 1865年4月9日，美国南北战争。
 
 1864年2月至10月普丹战争
 
@@ -65,6 +67,8 @@
 1900年八国联军侵华
 
 1901年《辛丑条约》
+
+1904年2月—1905年9月：日俄战争。
 
 1905年至1911年清政府立宪运动、清末新政
 
@@ -104,6 +108,8 @@
 
 1919年，1月巴黎和会召开；5月五四运动；6月5日上海工人罢工；6月28日中国代表未出席巴黎和约的签字仪式；9月李大钊《我的马克思主义观》；旧民主主义革命时期至此结束，新民主主义革命时期的开端。
 
+**1919~1927大革命时期**
+
 1920年，3月李大钊成立马克思主义学说研究会；4月俄共来华会见陈李；8月共产党早期组织在上海《新青年》编辑部成立，陈独秀为书记。8月陈望道翻译的《共产党宣言》出版。10月李大钊等在北京成立共产党早期组织，并在11月定名为中国共产党北京支部，李大钊任书记。11月，上海机器工会。
 
 1921年，苏维埃俄国内战结束，苏维埃俄国实现新经济政策；7月23日，中国共产党第一次全国代表大会；9月中国第一个农民协会，开展反抗地主压迫斗争
@@ -122,24 +128,224 @@
 
 1927年，3月蒋介石制造中山舰事件。4月12日蒋介石上海四一二反革命政变，并在南京建立国民政府，国民政府宁汉分裂。7月15日汪精卫武汉国民政府发动七一五反革命政变，国共合作破裂，大革命失败。7月中共中央政治局常委会决定三件大事（土地革命兴起）。8月7日中共秘密召开八七会议（土地革命、武装反抗、清算右倾机会主义错误）。8月1日，南昌起义。9月，宁汉合流。9月9日，秋收起义。12月11日广州起义。
 
-1927-1937：土地革命时期
+**1927~1937土地革命时期**
 
 1928年，4月讨伐张作霖。6月张作霖被日本炸死。10月和11月，毛泽东《中国的红色政权为什么能够存在？》、《井冈山的斗争》（工农武装割据思想）。12月毛泽东主持制定中共第一个土地法。12月29日东北易帜，北洋军阀不再作为独立的政治力量存在，国民党在全国范围内建立了自己的统治。
 
 1928-1929年，中国民族工商业短暂繁荣。
 
-1929年，2月蒋桂战争、蒋冯战争。4月毛泽东主持制定中共第二个土地法。12月下旬古田会议（思想建党、政治建军）。
+1929年，2月蒋桂战争、蒋冯战争。4月毛泽东主持制定中共第二个土地法。10月，由美国开始的经济危机席卷整个资本主义世界。12月下旬古田会议（思想建党、政治建军）。
 
 1930年，1月毛泽东《星星之火，可以燎原》（党的中心转移到农村）。5月毛泽东《反对本本主义》（理论与实际相结合）。5月至10月，中原大战。10月蒋介石开始”围剿“。
 
 1930年10月~1931年7月，连续粉碎三次”围剿“。
 
-1931年，11月中华苏维埃第一次全国工农兵代表大会举行，《中华苏维埃共和国宪法大纲》。
+**1931~1945抗日战争时期**
 
-1932年，年底取得第四次反”围剿“成功，鄂豫皖、湘鄂西等根据地反“围剿”战争也取得重大胜利
+1931年，5月汪精卫、孙科等人成立广州国民政府和蒋介石南京政府相对抗。7月蒋介石提出“攘外必先安内”方针。9月18日，九一八事变。9月20日中共中央号召全国农工武装起来。11月中华苏维埃第一次全国工农兵代表大会举行，《中华苏维埃共和国宪法大纲》。
+
+1932年，1月28日日本进攻上海（一·二八事变），第一次淞沪抗战开始。1月，原西北军将领冯玉祥在张家口成立察哈尔民众抗日同盟军。2月东北全境沦陷，“伪满洲国”。4月15日中华苏维埃共和国临时中央政府宣布对日作战。年底取得第四次反”围剿“成功，鄂豫皖、湘鄂西等根据地反“围剿”战争也取得重大胜利。11月，福建事变（国民党军第十九路军公开宣布抗日反蒋）。
 
 1933年9月25日至1934年10月：第五次反“围剿”，“左”倾教条主义错误
 
-1934年10月，第五次反“围剿”失败，被迫实行战略性转移，长征。
+1933年，3月至5月长城抗战。5月5日签订了《淞沪停战协定》。5月31日，中日《塘沽协定》。
 
-1935年，1月遵义会议。
+1934年，1月福建事变失败。10月，第五次反“围剿”失败，被迫实行战略性转移，长征。
+
+1935年，华北事变，日本策动、拼凑了一些地方性傀儡政权。意大利入侵埃塞俄比亚。1月遵义会议。8月1日，八一宣言，呼吁停止内战。12月毛泽东《论反对日本帝国主义的策略》。12月9日，一二九运动(北平抗日游行、反对华北自治）。12月党的瓦窑堡会议（提出党的抗日民族统一战线）。
+
+1936年10月红军会师，长征结束。12月毛泽东《中国革命战争的战略问题》。12月12日西安事变。
+
+1936年7月—1939年4月西班牙内战。
+
+1937年夏，毛泽东《实践论》《矛盾论》。7月7日，卢沟桥事变（七七事变），日本全面侵华战争由此开始，21天后北平沦陷。8月国共两党达成协议（八路军、新四军）。8月中共洛川会议（抗日救国十大纲领）。8月13日—11月12日，淞沪会战，上海沦陷。9月—11月太原会战（9月八路军平型关大捷，11月太原失守）。9月22日国民党《中国共产党为公布国共合作宣言》。9月23日蒋介石发表实际承认共产党合法地位的谈话。11月华北战场忻口会战。11月20日迁移政府于重庆。12月南京沦陷（南京大屠杀）。
+
+1938年，1月至5月台儿庄战役、徐州会战。5月毛泽东《论持久战》。6月至10月武汉会战，武汉失守。9月至11月，党的六届六中全会（提出马克思主义中国化）。10月广州失守。10月从战略防御阶段转为战略相持阶段。12月中国国民党副总裁汪精卫投降日本。
+
+1939年。1月国民党“防共委员会”。8月23日《苏德互不侵犯条约》。9月1日德国进攻波兰（一战欧洲部分爆发）。10月，宪政运动（批评国民党一党专政）。
+
+1940年，3月汪精卫在南京成立伪“中华民国国民政府”。4月9日德国攻击丹麦和挪威。5月敦刻尔克大撤退。6月22日，法国正式投降。8月至次年1月，百团大战。8月，创办延安自然科学院。
+
+1941年。6月22日苏德战争爆发。3月，中国民主政团同盟成立，9月创办盟报《光明报》。5月毛泽东《改造我们的学习》（延安整风运动、反对主观主义）。12月7日偷袭珍珠港，太平洋战争爆发。
+
+1942年。1月《联合国家宣言》。1月，第三次长沙会战（给日军有力打击）。2月，中国远征军进入缅甸抗日。2月《整顿党的作风》《反对党八股》（延安整风运动在全党范围普遍展开）。中途岛海战，太平洋战争转折点。
+
+1942年7月—1943年2月，斯大林格勒战役（二战转折点）。
+
+1943年11月《开罗宣言》。11月德黑兰会议。
+
+1944年，豫湘桂战役。6月诺曼底登陆。9月，提出联合政府主张。
+
+1945年，2月雅尔塔会议。4月中共七大（制定了党的政治路线、三大作风、毛泽东思想、党在政治上思想上理论上走向成熟）。4月至6月，联合国制宪会议《联合国宪章》。5月德国投降。7月《波茨坦公告》。8月，苏联进入中国东北对日作战。8月6日广岛”小男孩“。8月9日长崎“胖子”。8月15日，《终战诏书》。8月重庆谈判。9月2日，日本签署向同盟国投降书。9月3日，中国人民抗日战争胜利纪念日。10月10日，《政府与中共代表会谈纪要》（双十协定）。10月25日中国政府举行受降仪式。年底，一二·一运动。
+
+**1945~1949解放战争时期**
+
+1946年。1月10日重庆政治协商会议。5月4日《五四指示》。6月23日下关惨案。6月26日，国民党进攻中原解放军，挑起了全国性的内战。12月30日一二·三〇运动。
+
+1946年至1947年6月：战略防御阶段
+
+1947年。五二〇运动。6月千里跃进大别山。7月《中国土地法大纲》。10月，国民党宣布民盟为“非法团体”
+
+1948年9月12日 至 11月2日辽沈战役。
+
+1948年11月6日 至 1949年1月10日淮海战役。
+
+1948年11月29日 至 1949年1月31日平津战役。
+
+1949年。1月22日无党派人士《对时局的意见》。3月，中共七届二中全会。4月4日，北大西洋公约组织。4月23日，南京解放。6月，毛泽东《论人民民主专政》。9月21日，中国人民政治协商会议第一届全体会议，《中国人民政治协商会议组织法》《中华人民共和国中央人民政府组织法》《中国人民政治协商会议共同纲领》（共同纲领，宪法前身）。10月1日中华人民共和国成立。
+
+**1949年至1956年过渡时期**。
+
+1949至1953年国民经济的恢复和初步发展时期。
+
+1950年。2月14日《中苏友好同盟互助条约》。4月《中华人民共和国婚姻法》。5月海南岛解放。6月中共第七届三中全会。6月，朝鲜内战。10月抗美援朝。土地改革（1950年至1953年春）《中华人民共和国土地改革法》。
+
+1951年5月西藏和平解放。
+
+1951年底至1952年10月：“三反”运动。
+
+1952年上半年：“五反”运动。
+
+1953年。7月抗美援朝胜利。12月“过渡时期总路线”。“一五”计划。
+
+1953至1956年社会主义工业化和三大改造时期。
+
+1954年9月20日第一部《中华人民共和国宪法》第一届全国人民代表大会第一次会议上通过（宪法1.0）。
+
+1955年，华沙条约组织（华约）建立
+
+1956年。社会主义三大改造基本完成。过渡时期结束。4月25日毛泽东《论十大关系》。9月中共八大（路线制定）。
+
+**1956-1966年，全面建设社会主义时期。**
+
+1957年。2月《关于正确处理人民内部矛盾的问题》。4月《关于整风运动的指示》（整风运动）。《一九五七年夏季的形势》。6月反右派斗争。
+
+1958年5月“大跃进”、人民公社化运动高潮（”大跃进“至1960年）。苏联提出要在中国领土和领海上建立中苏共有共管的长波电台和共同舰队，遭到坚决拒绝，中苏关系开始恶化。
+
+1958年11月第一次郑州会议作出初步纠正“左”倾错误的努力、党中央领导整顿人民公社。
+
+1959年至1961年三年困难时期（自然灾害）。
+
+1959年。6月苏联政府撕毁两国关于国防新技术协定。7月纠正“左”倾错误的努力被庐山会议“反右倾”斗争中断。8月，中印第一次边境冲突，苏方不问是非曲直发表偏袒印度的声明，中苏关系进一步恶化。
+
+1960年，石油输出国组织（“欧佩克”）建立。
+
+1961至1975年，美国对越南发动的侵略战争。
+
+1961年1月中共八届九中全会（国民经济、调整巩固充实提高）。3月”农业六十条“。
+
+1962年。一二月间”七千人大会“（总结了”大跃进“以来经济建设工作的经验教训）。10月中印边境自卫反击战，11月结束。
+
+1963年夏开始，各项建设事业呈现明显的健康发展势头。到1965年底，调整国民经济的任务全面完成。
+
+1964年底，周恩来”四个现代化“。10月中国研制的第一颗原子弹爆炸成功。
+
+1966年。3月苏共召开二十三大，中国共产党决定不派代表出席，中苏两党关系基本中断。5月中共中央政治局扩大会议《中国共产党中央委员会通知》（”五一六通知“）。8月中共八届十一中全会《中国共产党中央委员会关于无产阶级文化大革命》简称”十六条“（标志着“文化大革命”的全面发动）。
+
+**1966年5月至1976年10月间：文化大革命时期**
+
+1967年。1月起”文化大革命“进入”全面夺权“阶段（打倒一切、全面内战）。2月批判“文化大革命”的老一辈革命家被诬为”二月逆流“。6月，于敏等参与研制的中国第一颗氢弹空爆试验成功爆炸
+
+1968年。苏修社会帝国主义镇压布拉格之春。9月，各地先后成立革命委员会（一定程度上结束了”文化大革命“前期的无政府状态）。10月，主席刘少奇被开除（一年后，刘少奇含冤病逝）。
+
+1969年。4月中共第九次全国代表大会（使”文化大革命“的理论和实践进一步系统化、合法化）。
+
+1970年至1971年间：林彪反革命集团阴谋夺取最高权力、策动反革命武装政变（客观上宣告”文化大革命“理论和实践的失败）。
+
+1970年。1月第一枚中远程导弹发射成功。4月24日，中国用长征一号运载火箭，成功地发射中国的第一颗人造卫星-- 东方红一号
+
+1971年10月25日重返联合国。
+
+1972年，周恩来提出批判极”左“思潮（使得各方面工作有了明显起色）。2月，美国总统尼克松访华。
+
+1973年，中共第十次全国代表大会（继续肯定了中共九大的政治路线和组织路线），此后”四人帮“企图全面篡夺党和国家的最高权力。
+
+1975年。1月，四届全国人大（任周恩来为总理，邓小平为第一副总理），第二部《中华人民共和国宪法》通过（’七五宪法”，有严重缺点、错误的宪法，宪法2.0）。11月成功发射中国第一颗返回式遥感人造地球卫星。
+
+1976年。1月8日周恩来逝世。7月6日朱德逝世。9月9日毛泽东逝世。10月6日对“四人帮”隔离审查，14日党中央公布粉碎”四人帮“消息，结束了文化大革命。
+
+**1976年到1978年：徘徊中前进的时期**：
+
+1977年2月7日：两个“凡是”（“凡是毛主席作出的决策，我们都坚决维护，凡是毛主席的指示，我们都始终不渝地遵循”。其实质是又延续毛泽东晚年的“左”倾错误）
+
+1977－1978年：党中央主要领导人继续犯”左”的错误，指导思想没有改变，经济建设急于求成。教科文事业面貌一新，国民经济较快恢复。真理标准问题讨论解放了人们的思想。
+
+1978年越南入侵柬埔寨，中国和越南之间爆发中越战争。3月第五届全国人民代表大会第一次会议上第三部《中华人民共和国宪法》通过（七八宪法，宪法3.0）。11月安徽小岗村”大包干“。11月，邓小平《解放思想、实事求是，团结一致向前看》（冲破两个”凡是“）。12月18日至22日中共十一届三中全会（彻底否定两个”凡是“、工作重心转移、以邓小平为核心、改革开放）。
+
+**1978年12月：中国开始走上改革开放的道路。**
+
+1979年12月24日 至 1989年2月15日：苏联-阿富汗战争。
+
+1979年。3月30日邓小平《坚持四项基本原则》。4月对国民经济实行”调整、改革、整顿、提高“的新八字方针（用三年时间调整国民经济，纠正经济工作中的失误，认真清理过去在这方面长期存在的”左倾错误“）。11月中共十一届四中全会《中共中央关于加快农业发展若干问题的决定》（家庭联产承包责任制）。
+
+1980年。5月，在深圳、珠海、汕头、厦门设立经济特区。
+
+1981年6月中共十一届六中全会《历史决议》通过（1979年11月起由邓小平主持中共中央起草，科学评价毛泽东及其思想）。
+
+1982年。12月4日，中华人民共和国第四部宪法（宪法4.0）在第五届全国人大第五次会议上正式通过并颁布。
+
+1982年。9月中共十二次全国代表大会胡耀邦《全面开创社会主义现代化建设的新局面》（社会主义现代化纲领）。
+
+1983年。4月建立海南省、海南经济特区。10月废除人民公社，建立乡（镇）政府作为基层政权，村民委员会。
+
+1984年，基本上实现了以家庭联产承包责任制为中心的农村改革的第一步。5月，开放14个沿海城市。10月中共十二届三中全会《中共中央关于经济体制改革的决定》（马克思主义基本原理和中国社会主义实践相结合的政治经济学）。
+
+1985年，农村改革第二步提上日程（发展农村的商品结构、改变农村的产业结构）。2月，三个开放区。
+
+1986年，八六学潮。12月30日，邓小平在同几位中央负责同志谈话时指出，要旗帜鲜明地坚持四项基本原则，反对资产阶级自由化。
+
+1987年10月，中共第十三次全国代表大会（社会主义初级阶段和党的基本路线的提出，一个中心两个基本点）。
+
+1989年，戈尔巴乔夫访华（中苏关系正常化）。八九政治风波。
+
+1990年8月2日 至 1991年2月28日： 海湾战争。
+
+1991年。12月8日独立国家联合体。12月26日苏联解体。
+
+1992年。1月至2月21日，南方谈话。10月中共第十四次全国代表大会（确立社会主义市场经济体制改革目标）。11月九二共识。
+
+1995年。1月1日，世界贸易组织正式开始运作。
+
+1997年。7月1日香港回归。9月中共第十五次全国代表大会（高举邓小平理论伟大旗帜）
+
+1999年。12月20日澳门回归。
+
+2001年。9月11日911事件。10月7日阿富汗战争爆发。12月11日，中国正式加入世界贸易组织。
+
+2002年11月中共第十六大全国代表大会（指定全面建成小康社会的奋斗目标、“三个代表”重要思想写入党章、党的执政能力建设）。
+
+2003年3月20日 至 2011年12月18日：伊拉克战争。
+
+2003年10月中共十六届三中全会，胡锦涛正式提出“坚持以人为本，树立全面、协调、可持续发展的发展观”。
+
+2004年9月中共十六届四中全会（提出构建社会主义和谐社会的战略任务）。11月党员先进性教育工作。
+
+2005年2月全面论述构建社会主义和谐社会的重大战略思想。
+
+2007年10月中共十七大（全面阐述“科学发展观”、全面建设小康社会新部署、改革开放的深化）。
+
+2009年9月中共十七届四中全会（提出加强和改进党的建设的总体要求、目标任务、重要举措）。
+
+2012年11月中共第十八次全国代表大会（党的十八大），全面建成小康社会目标的确定，标志着中国已经进入全面建成小康社会的决定性阶段，开启了中国特色社会主义新时代。11月15日，中共十八届一中全会选举习近平为中央委员会总书记，决定习近平为中央军委主席。2012年十八大结束后不久习近平提出“实现中华民族伟大复兴就是中华民族以来最伟大的梦想”。十八大以来，党统筹推进“五位一体”总体布局，协调推进“四个全面”战略布局。12月，习近平首次提出“强军梦”，年底提出“为建设一支听党指挥、能打胜仗、作风优良的人民军队而奋斗”。
+
+**2012年11月十八大标志着进入中国特色社会主义新时代**
+
+2013年，3月中华人民共和国第十二届全国人民代表大会，习近平当选为中华人民共和国主席、中华人民共和国中央军事委员会主席。李克强同志为中华人民共和国国务院总理，会上习近平进一步强调（实现中华民族伟大复兴的中国梦，就是要实现国家富强、民族振兴、人民幸福，走中国道路，弘扬中国精神，凝聚中国力量，依靠人民实现）。3月习近平莫斯科演说首次提出人类命运共同体理念。
+
+2014年。11月习近平提出推进中国特色大国外交的战略思想。
+
+2016年，10月党的十八届六中全会（明确了习近平总书记党中央、全党的核心地位）。台湾民进党上台拒不承认九二共识。
+
+2017年。1月习近平联合国日内瓦总部演讲，系统阐述人类命运共同体的理论内涵和目标路径。3月，”构建人类命运共同体“被写入联合国安理会第2344号决议。10月党的第十九次全国代表大会（把习近平总书记党的核心、全党的核心地位写入党章；主题：不忘初心，牢记使命，高举中国特色社会主义伟大旗帜，决胜全面建成小康社会，夺取新时代中国特色社会主义伟大胜利；主要矛盾：人民日益增长的美好生活需要和不平衡不充分的发展之间的矛盾；2020到21世纪中叶两个阶段；党的建设）。
+
+2018年。3月十三届全国人大《中华人民共和国宪法修正案》（以根本法形式确立党的领导地位）。美国单方面执意挑起中美经贸摩擦。
+
+2019年。6月香港爆发”修例风波“。10月党的十九届四中全会，提出坚持和完善中国特色社会主义制度，推进国家治理体系和治理能力现代化的目标。
+
+2020年。是全面建成小康社会的决胜期。年初新冠疫情爆发。2月党中央决定成立中央港澳工作领导小组，取代原来设立的中央港澳工作协调小组。6月十三届全国人大常委会第二十次会议通过《中华人民共和国香港特别行政区维护国家安全法》（香港国安法），并将其列入香港基本法附件三，明确由香港特别行政区在当地公布实施，对香港特别行政区维护国家安全制度机制作出法律化、规范化、明晰化的具体安排。10月，党的十九届五中全会，《中共中央关于制定国民经济和社会发展第十四个五年规划和二〇三五年远景目标的建议》（《建议》，”十四五“规划的明确）
+
+2020年到2035年，在小康社会的基础上，在奋斗15年，基本实现社会主义现代化。
+
+2021年11月11日党的十九届六中全会（确立习思指导地位）。
+
+2035年到21世纪中叶，在基本实现现代化的基础上，在奋斗15年，把我国建成富强民主文明和谐美丽的社会主义现代化强国。
